Deletando arquivos não utilizados

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="info">
                    <p>VOCÊ ESTÁ PRONTO PARA TER O CABELO DOS SEUS SONHOS? </p> 
                     <a href="https://app.monetizze.com.br/r/BUM1635498">Compre Agora No Site Oficial</a>
-                    <img src="opt.png" alt="" srcset="">
+                    <img src="selos.png" alt="" srcset="">
                 </div>
             </div>
             <div class="img-container">
