--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <a class="link-button black" href="#sessao-informativa">Experimente O Folixil Agora <p>Aproveite com 70% de Desconto</p></a>
             <img src="imgs/icones.png" alt="" srcset="">
         </section>
-        <section id="depoimentos">
+        <!-- <section id="depoimentos">
             <h1>VEJA AQUI QUEM USOU E APROVOU O FOLIXIL!</h1>
             <h2>--- Garanta você também benefícios incríveis para o seu cabelo! ---</h2>
             <div id="depoimentos-container">
@@ -100,7 +100,7 @@
                 </div>
             </div>
 
-        </section>
+        </section> -->
         <section id="informacoes-legais">
             <div class="informacao-item">
                 <img src="imgs/anivisa.png" alt="" srcset="">
@@ -235,7 +235,7 @@
             <div class="detalhe-headline">
                 <h1>É A SUA PRIMEIRA COMPRA NA INTERNET?</h1>
                 <br>
-                <h2>Não se preocupe, esse site é 100% seguro, empresa confiável e entrega garantida!</h2>
+                <!-- <h2>Não se preocupe, esse site é 100% seguro, empresa confiável e entrega garantida!</h2> -->
             </div>
             <div class="detalhes-de-compra">
                 <div class="detalhe-item">
