--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <a class="link-button black" href="#sessao-informativa">Experimente O Folixil Agora <p>Aproveite com 70% de Desconto</p></a>
             <img src="imgs/icones.png" alt="" srcset="">
         </section>
-        <!-- <section id="depoimentos">
+        <section id="depoimentos">
             <h1>VEJA AQUI QUEM USOU E APROVOU O FOLIXIL!</h1>
             <h2>--- Garanta você também benefícios incríveis para o seu cabelo! ---</h2>
             <div id="depoimentos-container">
@@ -76,31 +76,30 @@
                         suas vitaminas ajudaram muito.”
                     </p>
                 </div>
-                <div class="item">
+                <!-- <div class="item">
                     <h3>LUIZ GROFFENHEIN, 44 ANOS</h3>
                     <img src="depoimentos/img3.jpg" alt="" srcset="">
                     <p>
                         “A felicidade não nega quem pode
-                        ter seu cabelo de volta, depois dos
+                        ter seu cabelo de volta, depois do folixil
                         meus cabelos novamente e não pode
                         deixar de tomar um dia meu folixil,
                         autoestima lá em cima.”
                     </p>
-                </div>
+                </div> -->
                 <div class="item">
                     <h3>ANTÔNIO MATOS LIMA , 52 ANOS</h3>
                     <img src="depoimentos/img4.jpg" alt="" srcset="">
                     <p>
                         “São 4 meses e meio sem interrupção
-                        e esse resultado é positivo.
-                        Meu cabelo cresceu e causou essas
-                        falhas há alguns anos! Muito orgulhoso
+                        e o resultado é positivo.
+                        Muito orgulhoso
                         e feliz Folixil é nota 10.”
                     </p>
                 </div>
             </div>
 
-        </section> -->
+        </section>
         <section id="informacoes-legais">
             <div class="informacao-item">
                 <img src="imgs/anivisa.png" alt="" srcset="">
@@ -235,7 +234,7 @@
             <div class="detalhe-headline">
                 <h1>É A SUA PRIMEIRA COMPRA NA INTERNET?</h1>
                 <br>
-                <!-- <h2>Não se preocupe, esse site é 100% seguro, empresa confiável e entrega garantida!</h2> -->
+                <h2>Não se preocupe, esse site é 100% seguro, empresa confiável e entrega garantida!</h2>
             </div>
             <div class="detalhes-de-compra">
                 <div class="detalhe-item">
