Mudando a meta description

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Compre o Folixil Original e Com Frete Grátis">
+    <meta name="description" content="Folixil Plus 100% Original Apenas R$ 59,80 Por pote Garantia de 30 Dias Frete Grátis. Se você não estiver satisfeito com os resultados do Folixil Em até 30 dias, reembolsamos.">
     <meta name="keywords" content="folixil, crescimento capilar, comprar folixil, folixil funciona, anti-calvície, cuidar da calvície"/>
 
     <link rel="icon" href="favicon.png" type="image/png" sizes="32x32">
