--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon.png" type="image/png" sizes="32x32">
     <link rel="stylesheet" href="styles.css">
-    <title>Folixil</title>
+    <title>Comprar Folixil Original</title>
     
 </head>
 <body>
