--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <main>
-        <header><img src="logo-folixil.png" alt="Logo Folixil" srcset=""></header>
+        <header><img src="imgs/logo-folixil.png" alt="Logo Folixil" srcset=""></header>
         <section class="sessao-black grid-one">
             <div id="headlines">
                 <h1>ATENÇÃO! ESSA É A SUA OPORTUNIDADE DE LUTAR CONTRA A CALVICE DE FORMA EFETIVA E TOTALMENTE NATURAL!</h1>
@@ -40,7 +40,7 @@
                 <div id="cta-link-container">
                     <p>GARANTA AGORA O SEU FOLIXIL COM FRETE GRÁTIS!</p> 
                      <a class="link-button" href="#sessao-informativa">Compre Agora Com Frete Grátis <p>Oferta Por Tempo Limitado</p> </a>
-                     <img src="selos.png" alt="Selos de Garantia" srcset="">
+                     <img src="imgs/selos.png" alt="Selos de Garantia" srcset="">
                 </div>
             </div>
         </section>
