--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="favicon.png" type="image/png" sizes="32x32">
     <link rel="stylesheet" href="styles.css">
     <meta name="description" content="A Fórmula Plus Anti-Calvície mais usada por homens e mulheres na Europa, chegou ao Brasil! A Anvisa liberou o Folixil para brasileiros que desejam acabar de vez por todas com a calvície. "/>
-    <title>Comprar Folixil Original</title>
+    <title>Folixil funciona? VEJA ISSO antes de comprar</title>
     
 </head>
 <body>
